--- a/css/style.css
+++ b/css/style.css
@@ -270,12 +270,17 @@ body.menu-open {
 }
 .header__logo {
   z-index: 20;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
 }
 .header__logo img {
-  height: auto;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 @media (min-width: 73.125em) {
   .header__logo img {
@@ -2712,18 +2717,6 @@ body.menu-open {
     -ms-flex-item-align: center;
         align-self: center;
   }
-}
-.advantages__image::before {
-  content: "";
-  position: absolute;
-  bottom: -25px;
-  left: 0;
-  height: 3.125rem;
-  width: 100%;
-  -webkit-filter: blur(9px);
-          filter: blur(9px);
-  background-color: var(--light-accent-color);
-  z-index: 3;
 }
 .advantages__image img {
   width: 100%;
