--- a/scss/style.scss
+++ b/scss/style.scss
@@ -119,10 +119,13 @@ body {
 
 	&__logo {
 		z-index: 20;
+		flex-shrink: 0;
 		flex-grow: 1;
 		img {
 			@include adaptiveValue("width", 217, 150);
-			height: auto;
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
 		}
 	}
 
@@ -1367,17 +1370,17 @@ body {
 		@media (max-width: toEm(930)) {
 			align-self: center;
 		}
-		&::before {
-			content: "";
-			position: absolute;
-			bottom: -25px;
-			left: 0;
-			height: toRem(50);
-			width: 100%;
-			filter: blur(9px);
-			background-color: var(--light-accent-color);
-			z-index: 3;
-		}
+		// &::before {
+		// 	content: "";
+		// 	position: absolute;
+		// 	bottom: -25px;
+		// 	left: 0;
+		// 	height: toRem(50);
+		// 	width: 100%;
+		// 	filter: blur(9px);
+		// 	background-color: var(--light-accent-color);
+		// 	z-index: 3;
+		// }
 		img {
 			width: 100%;
 			height: 100%;
