--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ body.menu-open {
 }
 @media (any-hover: hover) {
   .menu__item:hover .menu__link {
-    color: var(--light-accent-color);
+    color: rgb(71, 71, 205);
   }
 }
 .menu__link {
