--- a/scss/style.scss
+++ b/scss/style.scss
@@ -194,7 +194,7 @@ body {
 		@media (any-hover: hover) {
 			&:hover {
 				.menu__link {
-					color: var(--light-accent-color);
+					color: rgb(71, 71, 205);
 				}
 			}
 		}
