--- a/css/style.css
+++ b/css/style.css
@@ -284,18 +284,18 @@ body.menu-open {
 }
 @media (min-width: 73.125em) {
   .header__logo img {
-    width: 13.5625rem;
+    width: 12.5rem;
   }
 }
 @media (min-width: 20em) and (max-width: 73.125em) {
-  @supports (width: clamp( 9.375rem , 7.7985294118rem  +  7.8823529412vw , 13.5625rem )) {
+  @supports (width: clamp( 9.375rem , 8.1985294118rem  +  5.8823529412vw , 12.5rem )) {
     .header__logo img {
-      width: clamp( 9.375rem , 7.7985294118rem  +  7.8823529412vw , 13.5625rem );
+      width: clamp( 9.375rem , 8.1985294118rem  +  5.8823529412vw , 12.5rem );
     }
   }
-  @supports not (width: clamp( 9.375rem , 7.7985294118rem  +  7.8823529412vw , 13.5625rem )) {
+  @supports not (width: clamp( 9.375rem , 8.1985294118rem  +  5.8823529412vw , 12.5rem )) {
     .header__logo img {
-      width: calc(9.375rem + 4.1875 * (100vw - 20rem) / 53.125);
+      width: calc(9.375rem + 3.125 * (100vw - 20rem) / 53.125);
     }
   }
 }
@@ -2711,6 +2711,18 @@ body.menu-open {
   max-width: 23.75rem;
   position: relative;
   z-index: 2;
+  opacity: 0;
+  -webkit-transform: translateX(20px);
+      -ms-transform: translateX(20px);
+          transform: translateX(20px);
+}
+.advantages__image.visible {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 @media (max-width: 58.125em) {
   .advantages__image {
