--- a/scss/style.scss
+++ b/scss/style.scss
@@ -121,8 +121,10 @@ body {
 		z-index: 20;
 		flex-shrink: 0;
 		flex-grow: 1;
+
 		img {
-			@include adaptiveValue("width", 217, 150);
+								@include adaptiveValue("width", 200, 150);
+
 			width: 100%;
 			height: 100%;
 			object-fit: contain;
@@ -1367,20 +1369,16 @@ body {
 		max-width: toRem(380);
 		position: relative;
 		z-index: 2;
+		opacity: 0;
+		transform: translateX(20px);
+			&.visible {
+			opacity: 1;
+			transform: translateX(0);
+			transition: all 0.5s ease-in-out;
+		}
 		@media (max-width: toEm(930)) {
 			align-self: center;
 		}
-		// &::before {
-		// 	content: "";
-		// 	position: absolute;
-		// 	bottom: -25px;
-		// 	left: 0;
-		// 	height: toRem(50);
-		// 	width: 100%;
-		// 	filter: blur(9px);
-		// 	background-color: var(--light-accent-color);
-		// 	z-index: 3;
-		// }
 		img {
 			width: 100%;
 			height: 100%;
