--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,6 +142,21 @@ body {
 		flex-grow: 1;
 	}
 }
+@media (max-width:toEm(480)){
+[data-da] {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease, visibility 0s 0.5s;
+}
+
+[data-da].visible {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s ease, visibility 0s;
+}
+}
+
+
 
 .menu {
 	// .menu__body
