--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,13 +31,23 @@ html {
 }
 body {
 	font-family: "Poppins";
-
+	opacity: 0;
+	visibility: hidden;
+	transition:
+		opacity 0.1s ease,
+		visibility 0s linear 0.1s;
+	&.loaded {
+		opacity: 1;
+		visibility: visible;
+		transition: opacity 0.1s ease;
+	}
 	&.menu-open {
 		overflow: hidden;
 		touch-action: none;
 		overscroll-behavior: none;
 	}
 }
+
 .no-scroll {
 	overflow: hidden;
 }
@@ -140,23 +150,6 @@ body {
 
 	&__menu {
 		flex-grow: 1;
-	}
-}
-@media (max-width: toEm(480)) {
-	[data-da] {
-		opacity: 0;
-		visibility: hidden;
-		transition:
-			opacity 0.5s ease,
-			visibility 0s 0.5s;
-	}
-
-	[data-da].visible {
-		opacity: 1;
-		visibility: visible;
-		transition:
-			opacity 0.5s ease,
-			visibility 0s;
 	}
 }
 
