--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,24 +34,23 @@ body {
 	opacity: 0;
 	visibility: hidden;
 	transition:
-		opacity 0.1s ease,
-		visibility 0s linear 0.1s;
+		opacity 0.2s ease,
+		visibility 0s linear 0.2s;
 	&.loaded {
 		opacity: 1;
 		visibility: visible;
-		transition: opacity 0.1s ease;
+		transition: opacity 0.2s ease;
 	}
 	&.menu-open {
 		overflow: hidden;
 		touch-action: none;
 		overscroll-behavior: none;
+		scrollbar-gutter: stable;
 	}
 }
-
 .no-scroll {
 	overflow: hidden;
 }
-
 .wrapper {
 	overflow: clip;
 	display: flex;
