--- a/css/style.css
+++ b/css/style.css
@@ -149,8 +149,10 @@ body {
 }
 
 .header {
+  position: fixed;
   padding-top: 0.625rem;
-  position: relative;
+  background-color: #1a659e;
+  inset: 0% 0% auto;
   width: 100%;
   -webkit-transition: padding-top 0.3s ease;
   transition: padding-top 0.3s ease;
@@ -359,8 +361,9 @@ body {
 }
 
 .hero {
-  position: relative;
-  overflow: auto;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -380,7 +383,7 @@ body {
 }
 .hero__shape-bottom {
   position: absolute;
-  bottom: 0;
+  bottom: -4px;
   pointer-events: none;
   z-index: 2;
   width: 100%;
@@ -425,7 +428,7 @@ body {
   pointer-events: none;
 }
 .hero__content {
-  padding-top: 7.5rem;
+  padding-top: 5.625rem;
   text-align: center;
   color: #fff;
   display: -webkit-box;
@@ -495,11 +498,12 @@ body {
 .hero__text {
   line-height: 1.4em;
 }
-.hero__image {
+.hero__video {
   max-width: 53.125rem;
   z-index: 2;
 }
-.hero__image img {
+.hero__video video {
+  border-radius: 1.25rem;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
