--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,8 @@ body {
 }
 
 .header {
-  position: fixed;
   padding-top: 0.625rem;
-  background-color: #1a659e;
+  position: fixed;
   inset: 0% 0% auto;
   width: 100%;
   -webkit-transition: padding-top 0.3s ease;
@@ -162,7 +161,7 @@ body {
   max-width: 81.25rem;
 }
 .header__body {
-  padding: 0.625rem 0.625rem;
+  padding: 0.625rem;
   gap: 0.625rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -175,11 +174,6 @@ body {
           justify-content: space-between;
   background-color: #fff;
   border-radius: 1.25rem 0 1.25rem 0;
-}
-@media (max-width: 30em) {
-  .header__body {
-    padding: 0.625rem 0.3125rem;
-  }
 }
 .header__logo {
   z-index: 20;
@@ -201,20 +195,20 @@ body {
   }
 }
 @media (min-width: 20em) and (max-width: 73.125em) {
-  @supports (width: clamp( 6.875rem , 4.7573529412rem  +  10.5882352941vw , 12.5rem )) {
+  @supports (width: clamp( 6.25rem , 3.8970588235rem  +  11.7647058824vw , 12.5rem )) {
     .header__logo img {
-      width: clamp( 6.875rem , 4.7573529412rem  +  10.5882352941vw , 12.5rem );
+      width: clamp( 6.25rem , 3.8970588235rem  +  11.7647058824vw , 12.5rem );
     }
   }
-  @supports not (width: clamp( 6.875rem , 4.7573529412rem  +  10.5882352941vw , 12.5rem )) {
+  @supports not (width: clamp( 6.25rem , 3.8970588235rem  +  11.7647058824vw , 12.5rem )) {
     .header__logo img {
-      width: calc(6.875rem + 5.625 * (100vw - 20rem) / 53.125);
+      width: calc(6.25rem + 6.25 * (100vw - 20rem) / 53.125);
     }
   }
 }
 @media (max-width: 20em) {
   .header__logo img {
-    width: 6.875rem;
+    width: 6.25rem;
   }
 }
 .button {
@@ -361,25 +355,27 @@ body {
 }
 
 .hero {
-  position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
   background-color: transparent;
   background-image: -webkit-gradient(linear, left top, left bottom, from(var(--light-accent-color)), to(var(--dark-accent-color)));
   background-image: linear-gradient(180deg, var(--light-accent-color) 0%, var(--dark-accent-color) 100%);
+  overflow: hidden;
+}
+@media screen and (max-width: 47.99875em) {
+  .hero {
+    height: auto;
+  }
 }
 .hero__shape-bottom {
   position: absolute;
@@ -428,7 +424,7 @@ body {
   pointer-events: none;
 }
 .hero__content {
-  padding-top: 5.625rem;
+  padding-top: 7.5rem;
   text-align: center;
   color: #fff;
   display: -webkit-box;
