--- a/css/style.css
+++ b/css/style.css
@@ -356,10 +356,11 @@ body {
 
 .hero {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -372,9 +373,9 @@ body {
   background-image: linear-gradient(180deg, var(--light-accent-color) 0%, var(--dark-accent-color) 100%);
   overflow: hidden;
 }
-@media screen and (max-width: 47.99875em) {
+@media (max-width: 47.99875em) {
   .hero {
-    height: auto;
+    height: 100%;
   }
 }
 .hero__shape-bottom {
@@ -406,6 +407,9 @@ body {
       -ms-flex-align: center;
           align-items: center;
   z-index: 2;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
   max-width: 73.125rem;
   position: relative;
 }
@@ -499,6 +503,7 @@ body {
   z-index: 2;
 }
 .hero__video video {
+  padding: 3.125rem 0;
   border-radius: 1.25rem;
   width: 100%;
   height: 100%;
