--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,16 +142,17 @@ body {
 
 .hero {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	display: flex;
+	overflow: auto;
 	justify-content: center;
 	align-items: center;
 	position: relative;
 	background-color: transparent;
 	background-image: linear-gradient(180deg, var(--light-accent-color) 0%, var(--dark-accent-color) 100%);
 	overflow: hidden;
-	@media screen and (max-width: toEm(767.98)) {
-		height: auto;
+	@media (max-width: toEm(767.98)) {
+		height: 100%;
 	}
 	&__shape-bottom {
 		position: absolute;
@@ -175,6 +176,9 @@ body {
 		justify-content: center;
 		align-items: center;
 		z-index: 2;
+		overflow: auto;
+		width: 100%;
+		height: 100%;
 		max-width: toRem(1170);
 		position: relative;
 		&::before {
@@ -242,6 +246,7 @@ body {
 		max-width: toRem(850);
 		z-index: 2;
 		video {
+			padding: toRem(50) 0;
 			border-radius: toRem(20);
 			width: 100%;
 			height: 100%;
