--- a/css/style.css
+++ b/css/style.css
@@ -128,19 +128,6 @@ body {
 
 .wrapper {
   overflow: clip;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  min-height: 100%;
-}
-.wrapper main {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
 }
 
 [class*=__container] {
@@ -356,7 +343,7 @@ body {
 
 .hero {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -372,6 +359,7 @@ body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(var(--light-accent-color)), to(var(--dark-accent-color)));
   background-image: linear-gradient(180deg, var(--light-accent-color) 0%, var(--dark-accent-color) 100%);
   overflow: hidden;
+  padding: 5.625rem 0;
 }
 @media (max-width: 47.99875em) {
   .hero {
@@ -407,7 +395,6 @@ body {
       -ms-flex-align: center;
           align-items: center;
   z-index: 2;
-  overflow: auto;
   width: 100%;
   height: 100%;
   max-width: 73.125rem;
