--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,12 +35,6 @@ body {
 
 .wrapper {
 	overflow: clip;
-	display: flex;
-	flex-direction: column;
-	min-height: 100%;
-	main {
-		flex-grow: 1;
-	}
 }
 
 [class*="__container"] {
@@ -142,7 +136,7 @@ body {
 
 .hero {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	display: flex;
 	overflow: auto;
 	justify-content: center;
@@ -151,6 +145,7 @@ body {
 	background-color: transparent;
 	background-image: linear-gradient(180deg, var(--light-accent-color) 0%, var(--dark-accent-color) 100%);
 	overflow: hidden;
+	padding: toRem(90) 0;
 	@media (max-width: toEm(767.98)) {
 		height: 100%;
 	}
@@ -176,7 +171,6 @@ body {
 		justify-content: center;
 		align-items: center;
 		z-index: 2;
-		overflow: auto;
 		width: 100%;
 		height: 100%;
 		max-width: toRem(1170);
