--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  overflow: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -364,6 +363,7 @@ body {
 @media (max-width: 47.99875em) {
   .hero {
     height: 100%;
+    padding: 3.125rem 0;
   }
 }
 .hero__shape-bottom {
@@ -387,7 +387,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 1.875rem;
+  gap: 2.1875rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -395,7 +395,6 @@ body {
       -ms-flex-align: center;
           align-items: center;
   z-index: 2;
-  width: 100%;
   height: 100%;
   max-width: 73.125rem;
   position: relative;
