--- a/scss/style.scss
+++ b/scss/style.scss
@@ -138,7 +138,6 @@ body {
 	width: 100%;
 	height: 100vh;
 	display: flex;
-	overflow: auto;
 	justify-content: center;
 	align-items: center;
 	position: relative;
@@ -148,6 +147,8 @@ body {
 	padding: toRem(90) 0;
 	@media (max-width: toEm(767.98)) {
 		height: 100%;
+			padding: toRem(50) 0;
+
 	}
 	&__shape-bottom {
 		position: absolute;
@@ -167,11 +168,10 @@ body {
 	&__container {
 		display: flex;
 		flex-direction: column;
-		gap: toRem(30);
+		gap: toRem(35);
 		justify-content: center;
 		align-items: center;
 		z-index: 2;
-		width: 100%;
 		height: 100%;
 		max-width: toRem(1170);
 		position: relative;
@@ -234,7 +234,7 @@ body {
 		line-height: 1.4em;
 	}
 
-	// .hero__image
+	// .hero__video
 
 	&__video {
 		max-width: toRem(850);
