--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,8 @@ body {
 
 .header {
   padding-top: 0.625rem;
-  position: fixed;
-  inset: 0% 0% auto;
   width: 100%;
+  background-color: #1a659e;
   -webkit-transition: padding-top 0.3s ease;
   transition: padding-top 0.3s ease;
   z-index: 10;
@@ -343,7 +342,7 @@ body {
 
 .hero {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -362,7 +361,6 @@ body {
 }
 @media (max-width: 47.99875em) {
   .hero {
-    height: 100%;
     padding: 3.125rem 0;
   }
 }
@@ -414,7 +412,6 @@ body {
   pointer-events: none;
 }
 .hero__content {
-  padding-top: 7.5rem;
   text-align: center;
   color: #fff;
   display: -webkit-box;
