--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,9 +44,8 @@ body {
 
 .header {
 	padding-top: toRem(10);
-	position: fixed;
-	inset: 0% 0% auto;
 	width: 100%;
+	background-color: #1a659e;
 	transition: padding-top 0.3s ease;
 	z-index: 10;
 	// .header__container
@@ -136,7 +135,7 @@ body {
 
 .hero {
 	width: 100%;
-	height: 100vh;
+		height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -146,8 +145,7 @@ body {
 	overflow: hidden;
 	padding: toRem(90) 0;
 	@media (max-width: toEm(767.98)) {
-		height: 100%;
-			padding: toRem(50) 0;
+		padding: toRem(50) 0;
 
 	}
 	&__shape-bottom {
@@ -194,7 +192,6 @@ body {
 	// .hero__content
 
 	&__content {
-		padding-top: toRem(120);
 		text-align: center;
 		color: #fff;
 		display: flex;
